[project]
name = "hamodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.4",
    "huggingface-hub>=0.36.2",
    "torch>=2.5.1",
    "unsloth>=2026.5.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm6.2"
